force-app/main/default/objects/Pessoa__c/Pessoa__c.object-meta.xml
<CustomObject>
    <label>Pessoa</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pessoas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>