force-app/main/default/objects/Pessoa__c/fields/Alerta_Aniversario__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Aniversario__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Alerta Aniversário</label>
    <type>Checkbox</type>
</CustomField>