force-app/main/default/objects/Pessoa__c/fields/Data_Nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_Nascimento__c</fullName>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>