force-app/main/default/objects/Pessoa__c/fields/Discord_ID__c.field-meta.xml
<CustomField>
    <fullName>Discord_ID__c</fullName>
    <label>Discord ID</label>
    <type>TextArea</type>
</CustomField>