force-app/main/default/objects/Pessoa__c/fields/HorasContrato__c.field-meta.xml
<CustomField>
    <fullName>HorasContrato__c</fullName>
    <label>Horas de contrato</label>
    <summarizedField>ContratoPessoa__c.Hora__c</summarizedField>
    <summaryFilterItems>
        <field>ContratoPessoa__c.StatusTexto__c</field>
        <operation>equals</operation>
        <value>Ativo</value>
    </summaryFilterItems>
    <summaryForeignKey>ContratoPessoa__c.Pessoa__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>