force-app/main/default/objects/Pessoa__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Município</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Pessoas</relationshipLabel>
    <relationshipName>Pessoas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>