force-app/main/default/objects/Pessoa__c/fields/NumeroContratosAtivos__c.field-meta.xml
<CustomField>
    <fullName>NumeroContratosAtivos__c</fullName>
    <label>Número de contratos ativos</label>
    <summaryFilterItems>
        <field>ContratoPessoa__c.StatusTexto__c</field>
        <operation>equals</operation>
        <value>Ativo</value>
    </summaryFilterItems>
    <summaryForeignKey>ContratoPessoa__c.Pessoa__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>