force-app/main/default/objects/Pessoa__c/fields/PercentualAlocacao__c.field-meta.xml
<CustomField>
    <fullName>PercentualAlocacao__c</fullName>
    <label>Percentual de alocação</label>
    <summarizedField>Alocacao__c.Percentual__c</summarizedField>
    <summaryFilterItems>
        <field>Alocacao__c.Status__c</field>
        <operation>equals</operation>
        <value>Ativa</value>
    </summaryFilterItems>
    <summaryForeignKey>Alocacao__c.Pessoa__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>