force-app/main/default/objects/Pessoa__c/fields/URL_Foto__c.field-meta.xml
<CustomField>
    <fullName>URL_Foto__c</fullName>
    <label>URL da Foto</label>
    <type>Url</type>
</CustomField>