force-app/main/default/objects/Pessoa__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Municipio__c</columns>
    <columns>PercentualAlocacao__c</columns>
    <columns>HorasContrato__c</columns>
    <columns>Alerta_Aniversario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NumeroContratosAtivos__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Pessoas ativas</label>
</ListView>